# rusted-yoyo

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/rusted-yoyo/: Cargo.toml
crates/rusted-yoyo-proxy/: Cargo.toml  build.rs
crates/rusted-yoyo-proxy/src/: lib.rs
crates/rusted-yoyo/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
crates/yyc-sys/: Cargo.toml  build.rs
crates/yyc-sys/src/: gm.hpp  gm.rs  lib.rs  yyc.h
crates/yyc-sys/src/gm/: APIVars.hpp  CCode.hpp  CDynamicVars.hpp  CHashMap.hpp  CInstance.hpp  CInstance_hooks.hpp  CRoom.hpp  CScript.hpp  CScriptRef.hpp  Code_Execute.hpp  Code_Execute_hook.hpp  Code_Execute_trace.hpp  Code_Function_GET_the_function.hpp  Code_Function_GET_the_function_t.hpp  Color.hpp  Common.hpp  CommonInt.hpp  CommonWindows.hpp  EJSRetValBool.hpp  EVariableType.hpp  EventType.hpp  GetSaveFileName_hook.hpp  GetSaveFileName_t.hpp  RToken.hpp  RValue.hpp  RVariableRoutine.hpp  RefThing.hpp  Script_Data.hpp  StructCreate.hpp  VMBuffer.hpp  VMExec.hpp  Variable_BuiltIn.hpp  YYGMLException.hpp  YYGMLFuncs.hpp  YYObjectBase.hpp  YYVAR.hpp  debug_console.hpp  inputs.hpp
