[workspace]
default-members = [
    "crates/rusted-yoyo",
    "crates/yyc-sys",
]
members = [
    "crates/rusted-yoyo",
    "crates/rusted-yoyo-proxy",
    "crates/xtask",
    "crates/yyc-sys",
]
resolver = "2"

[workspace.metadata.bin]
cargo-davinono = "0.1.12"
cargo-msrv = "0.15.1"

[profile.release-small]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "z"

[workspace.package]
authors = ["Dusk Banks <me@bb010g.com>"]
license = "ISC"
publish = false
repository = "https://github.com/bb010g/rusted-yoyo"

edition = "2021"
rust-version = "1.76.0" # -nightly
