[package]
name = "rusted-yoyo"
version = "0.1.0"

authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
alloc = []
default = ["std"]
std = ["alloc"]

[dependencies]
ctor = "0.2.6"
retour = { version = "0.4.0-alpha.2", git = "https://github.com/Hpmason/retour-rs.git" }

[target."cfg(windows)".dependencies]
windows.features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]
windows.version = "0.52.0"

