[package]
name = "yyc-sys"
version = "0.1.0"

authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true

[features]
alloc = []
default = []
std = ["alloc"]

[dependencies]

[build-dependencies]
anyhow = "1.0.79"
bindgen = { version = "0.69.2", features = ["experimental"] }
